fixed carousal not skipping to next slide on button press on mobile devices too small

--- a/src/components/carousal/carousal.module.scss
+++ b/src/components/carousal/carousal.module.scss
@@ -29,6 +29,7 @@
         opacity: 0;
         transform: scale(0.85);
         transition: opacity 500ms ease-in-out, transform 500ms ease-in-out;
+        pointer-events: none;
 
         &.active {
             opacity: 1;
@@ -36,9 +37,11 @@
             
             .elements {
                 z-index: 5;
+                
 
                 .controls {
                     z-index: 6;
+                    pointer-events: all;
                 }
             }
         }
@@ -62,7 +65,7 @@
         height: 100%;
         width: 100%;
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
 
         .controls {
             flex: 1;
@@ -70,6 +73,7 @@
             justify-content: space-between;
             align-items: center;
             padding: $padding;
+            
 
             .left-btn {
                 @include button(left, $padding);
